--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_store_detail">StoreDetail</string>
+    <string name="share">Share</string>
+    <string name="fav">Favorite</string>
+    <string name="message">Take a look at %1$s</string>
 
 </resources>
