--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="share">Share</string>
     <string name="fav">Favorite</string>
     <string name="message">Take a look at %1$s</string>
+    <string name="title_activity_store_image">store_image</string>
+    <string name="title_activity_share_image">ShareImage</string>
 
 </resources>
